# -MindSync

./: .gitignore  CONTRIBUTING.md  GitHub仓库简介.md  README-PREMIUM.md  README.md  Redmi设备兼容性指南.md  build-android-apk.ps1  docker-compose.multiarch.yml  docker-compose.yml  start.ps1  不侵权项目命名方案.md  合规性检查清单.md  安全审计报告.md  工程最佳实践指南.md  性能优化报告.md  输入法框架研究总结.md  输入法解决方案架构设计.md  输入法项目结构设计.md  项目命名与品牌策略.md
.github/workflows/: ci.yml
android-app/: build.gradle  gradle.properties  settings.gradle
android-app/app/: build.gradle  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/clipboardsync/android/data/database/: AppDatabase.kt
android-app/app/src/main/java/com/clipboardsync/android/data/model/: ClipboardItem.kt
android-app/app/src/main/java/com/clipboardsync/android/service/: ClipboardSyncService.kt
android-app/app/src/main/java/com/clipboardsync/android/ui/: MainActivity.kt
client/: .eslintrc.js  package-lock.json  package.json
client/src/main/: clipboardService.js  main.js  preload.js
client/src/renderer/: app.js  index.html  styles.css
client/src/shared/: syncClient.js
cross-platform-ime/: .gitignore  CMakeLists.txt  LICENSE  README.md
cross-platform-ime/configs/default/: default.yaml
cross-platform-ime/configs/default/rime/: cross_platform_pinyin.dict.yaml  cross_platform_pinyin.schema.yaml
cross-platform-ime/src/core/: CMakeLists.txt
cross-platform-ime/src/core/include/ime/core/: candidate.h  cloud_service.h  config.h  dictionary.h  engine.h  input_context.h  key_event.h  platform_adapter.h  plugin_manager.h  security.h
cross-platform-ime/src/core/src/: engine_impl.cpp  input_context.cpp
cross-platform-ime/src/core/tests/: CMakeLists.txt  core_tests.cpp
cross-platform-ime/src/platform/android/ims_service/: CrossPlatformIME.kt  ImeJniBridge.kt
cross-platform-ime/src/platform/harmonyos/input_ability/: InputMethodPanel.ets
cross-platform-ime/src/platform/ios/input_extension/: InputViewController.swift
cross-platform-ime/src/platform/linux/: CMakeLists.txt
cross-platform-ime/src/platform/linux/ibus_adapter/: ibus_platform_adapter.cpp  ibus_platform_adapter.h
cross-platform-ime/src/platform/macos/: CMakeLists.txt
cross-platform-ime/src/platform/macos/input_method_kit/: imk_platform_adapter.h  imk_platform_adapter.mm
cross-platform-ime/src/platform/windows/: CMakeLists.txt
cross-platform-ime/src/platform/windows/tsf_adapter/: tsf_platform_adapter.cpp  tsf_platform_adapter.h
cross-platform-ime/src/plugins/: CMakeLists.txt
cross-platform-ime/src/plugins/cloud_dict/: cloud_dictionary_service.cpp  cloud_dictionary_service.h
cross-platform-ime/src/plugins/common/: plugin_loader.cpp
cross-platform-ime/src/plugins/rime_adapter/: rime_adapter_plugin.cpp  rime_adapter_plugin.h
docs/: API-Documentation.md  Architecture-Design.md  Brand-Slogans.md  Getting-Started.md  Home-PREMIUM.md  Home.md  Installation-Guide.md  Technical-Paper.md  Technical-Specifications.md  User-Manual.md  Verification-Report.md  Wiki-Sync-Guide.md
nginx/: nginx.conf
nginx/conf.d/: clipboard-sync.conf
server/: .env.example  .eslintrc.js  .gitignore  Dockerfile  Dockerfile.multiarch  jest.config.js  package-lock.json  package.json
server/src/: app.js
server/src/config/: database.js  index.js  logger.js
server/src/controllers/: authController.js  backupController.js  clipboardController.js  deviceController.js
server/src/middleware/: auth.js
server/src/routes/: auth.js  backups.js  clipboard.js  devices.js
server/src/scripts/: init-db.js
server/src/services/: authService.js  backupService.js  clipboardService.js  deviceService.js
server/src/socket/: syncHandler.js
server/src/test/: auth.test.js  setup.js
server/src/utils/: crypto.js  validator.js
